Add fixes to notebooks.
Revert compatiblity in anticipation of merge.

--- a/doc_template/examples_root/examples/nb/brain_observatory_analysis.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory_analysis.ipynb
@@ -1445,12 +1445,12 @@
     "    # read in LocallySparseNoise output and display it\n",
     "    off_receptive_field = Image.open(Path(resources_dir) /\n",
     "                                     'brain_observatory_analysis' /\n",
-    "                                     'off_receptive_field.png')\n",
+    "                                     'off_receptive_field.png').convert('RGB')\n",
     "    display(off_receptive_field)\n",
     "\n",
     "    on_receptive_field = Image.open(Path(resources_dir) /\n",
     "                                     'brain_observatory_analysis' /\n",
-    "                                     'on_receptive_field.png')\n",
+    "                                     'on_receptive_field.png').convert('RGB')\n",
     "    display(on_receptive_field)"
    ]
   }
