Modify notebooks to use stimulus presentations.

--- a/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
@@ -2883,7 +2883,9 @@
     }
    ],
    "source": [
-    "stimulus_presentations = experiment_dataset.stimulus_presentations\n",
+    "# Grab the image stimulus only\n",
+    "stimulus_presentations = experiment_dataset.stimulus_presentations[\n",
+    "    experiment_dataset.stimulus_presentations.stimulus_block_name.str.contains('change_detection')]\n",
     "stimulus_presentations.head()"
    ]
   },
@@ -3160,6 +3162,8 @@
     }
    ],
    "source": [
+    "stimulus_presentations = dataset.stimulus_presentations[\n",
+    "    dataset.stimulus_presentations.stimulus_block_name.str.contains('change_detection')]\n",
     "unique_stimuli = [stimulus for stimulus in stimulus_presentations['image_name'].unique() if stimulus != 'omitted']\n",
     "colormap = {image_name: sns.color_palette()[image_number] for image_number, image_name in enumerate(np.sort(unique_stimuli))}\n",
     "colormap['omitted'] = np.nan # assign gray to omitted\n",
