--- a/doc_template/examples_root/examples/nb/visual_behavior_load_ophys_data.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_load_ophys_data.ipynb
@@ -1876,7 +1876,8 @@
     }
    ],
    "source": [
-    "dataset.dff_traces.loc[1086608577]"
+    "cell_specimen_id = dataset.dff_traces.index[0]\n",
+    "dataset.dff_traces.loc[cell_specimen_id]"
    ]
   },
   {
@@ -3457,16 +3458,19 @@
    },
    "outputs": [],
    "source": [
+    "# pull the image stimuli from the stimulus table\n",
+    "stimulus_presentations = dataset.stimulus_presentations[\n",
+    "    dataset.stimulus_presentations.stimulus_block_name.str.contains('change_detection')]\n",
+    "\n",
     "# create a list of all unique stimuli presented in this experiment\n",
-    "unique_stimuli = [stimulus for stimulus in dataset.stimulus_presentations['image_name'].unique()]\n",
+    "unique_stimuli = [stimulus for stimulus in stimulus_presentations['image_name'].unique()]\n",
     "\n",
     "# create a colormap with each unique image having its own color\n",
     "colormap = {image_name: sns.color_palette()[image_number] for image_number, image_name in enumerate(np.sort(unique_stimuli))}\n",
     "colormap['omitted'] = (1,1,1) # set omitted stimulus to white color\n",
     "\n",
     "# add the colors for each image to the stimulus presentations table in the dataset\n",
-    "stimulus_presentations = dataset.stimulus_presentations\n",
-    "stimulus_presentations['color'] = dataset.stimulus_presentations['image_name'].map(lambda image_name: colormap[image_name])"
+    "stimulus_presentations['color'] = stimulus_presentations['image_name'].map(lambda image_name: colormap[image_name])"
    ]
   },
   {
@@ -3730,16 +3734,19 @@
    },
    "outputs": [],
    "source": [
+    "# pull the image stimuli from the stimulus table\n",
+    "stimulus_presentations = dataset.stimulus_presentations[\n",
+    "    dataset.stimulus_presentations.stimulus_block_name.str.contains('change_detection')]\n",
     "\n",
     "# create a list of all unique stimuli presented in this experiment\n",
-    "unique_stimuli = [stimulus for stimulus in dataset.stimulus_presentations['image_name'].unique()]\n",
+    "unique_stimuli = [stimulus for stimulus in stimulus_presentations['image_name'].unique()]\n",
     "\n",
     "# create a colormap with each unique image having its own color\n",
     "colormap = {image_name: sns.color_palette()[image_number] for image_number, image_name in enumerate(np.sort(unique_stimuli))}\n",
     "colormap['omitted'] = (1,1,1)\n",
     "\n",
     "# add the colors for each image to the stimulus presentations table in the dataset\n",
-    "dataset.stimulus_presentations['color'] = dataset.stimulus_presentations['image_name'].map(lambda image_name: colormap[image_name])"
+    "stimulus_presentations['color'] = stimulus_presentations['image_name'].map(lambda image_name: colormap[image_name])"
    ]
   },
   {
