--- a/doc_template/examples_root/examples/nb/visual_behavior_mouse_history.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_mouse_history.ipynb
@@ -1113,8 +1113,7 @@
     }
    ],
    "source": [
-    "mouse_id = behavior_session_table['mouse_id'].unique()[76]\n",
-    "mouse_id"
+    "behavior_session_table.mouse_id.unique()[:5]"
    ]
   },
   {
@@ -2235,6 +2234,8 @@
     }
    ],
    "source": [
+    "# Select a mouse id\n",
+    "mouse_id = 445002\n",
     "this_mouse_table = behavior_session_table.query('mouse_id == @mouse_id').sort_values(by = 'date_of_acquisition')\n",
     "# note that the following is functionally equivalent if you find the syntax easier to read: \n",
     "# this_mouse_table = behavior_session_table[behavior_session_table['mouse_id'] == mouse_id]\n",
@@ -3266,9 +3267,12 @@
    },
    "outputs": [],
    "source": [
-    "unique_stimuli = [stimulus for stimulus in dataset.stimulus_presentations['image_name'].unique()]\n",
+    "# Get the image stimulus block\n",
+    "image_stimulus_presentations = dataset.stimulus_presentations[\n",
+    "    dataset.stimulus_presentations.stimulus_block_name.str.contains('change_detection')]\n",
+    "unique_stimuli = [stimulus for stimulus in image_stimulus_presentations['image_name'].unique()]\n",
     "colormap = {image_name: sns.color_palette()[image_number] for image_number, image_name in enumerate(np.sort(unique_stimuli))}\n",
-    "dataset._stimuli._presentations.value['color'] = dataset.stimulus_presentations['image_name'].map(lambda image_name: colormap[image_name])"
+    "image_stimulus_presentations['color'] = image_stimulus_presentations['image_name'].map(lambda image_name: colormap[image_name])"
    ]
   },
   {
@@ -3360,15 +3364,16 @@
     "        alpha = 0.5\n",
     "    )\n",
     "    \n",
-    "def plot_stimuli(ax, ti, tf):\n",
+    "def plot_stimuli(ax, ti, tf, image_stim_table):\n",
     "    '''\n",
     "    a simple function to plot stimuli as colored vertical spans on a s\n",
     "    inputs:\n",
     "        ax: axis on which to plot\n",
     "        intial_time: initial time to plot from\n",
     "        final_time: final time to plot to\n",
+    "        image_stim_table: Set of image stimuli to plot.\n",
     "    '''\n",
-    "    stimulus_presentations_sample = dataset.stimulus_presentations.query('end_time >= @initial_time and start_time <= @final_time')\n",
+    "    stimulus_presentations_sample = image_stim_table.query('end_time >= @initial_time and start_time <= @final_time')\n",
     "    for idx, stimulus in stimulus_presentations_sample.iterrows():\n",
     "        ax.axvspan(stimulus['start_time'], stimulus['end_time'], color=stimulus['color'], alpha=0.25)"
    ]
@@ -5416,7 +5421,7 @@
     "plot_running(ax, initial_time, final_time)\n",
     "plot_licks(ax, initial_time, final_time)\n",
     "plot_rewards(ax, initial_time, final_time)\n",
-    "plot_stimuli(ax, initial_time, final_time)\n",
+    "plot_stimuli(ax, initial_time, final_time, image_stimulus_presentations)\n",
     "\n",
     "ax.legend(['running speed', 'licks', 'rewards'])\n",
     "\n",
@@ -7856,9 +7861,9 @@
    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   },
   "kernelspec": {
-   "display_name": "allensdk",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "allensdk"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
