--- a/doc_template/examples_root/examples/nb/visual_behavior_mouse_history.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_mouse_history.ipynb
@@ -1131,7 +1131,7 @@
    },
    "source": [
     "## query the full behavior sessions table for all sessions that this mouse performed\n",
-    "This will return a subset of the full `behavior_session_table` in which the mouse_id matches our `mouse_id` variable (mouse 445002). The table should be returned in order of date of acquisition, but we'll use the Pandas command `sort_values(by = 'date_of_acquisition')` just to be sure.  \n",
+    "This will return a subset of the full `behavior_session_table` in which the mouse_id matches our `mouse_id` variable (mouse 440298). The table should be returned in order of date of acquisition, but we'll use the Pandas command `sort_values(by = 'date_of_acquisition')` just to be sure.  \n",
     "\n",
     "What we then see is a table that has metadata for every session performed by this mouse, in sequential order. The `equipment_name` column tells us where the session was run on that day and the `session_type` column tells us the name of the session type. See the technical white paper for a description of the progression of stages.\n",
     "\n",
@@ -2235,7 +2235,7 @@
    ],
    "source": [
     "# Select a mouse id\n",
-    "mouse_id = 445002\n",
+    "mouse_id = '445002'\n",
     "this_mouse_table = behavior_session_table.query('mouse_id == @mouse_id').sort_values(by = 'date_of_acquisition')\n",
     "# note that the following is functionally equivalent if you find the syntax easier to read: \n",
     "# this_mouse_table = behavior_session_table[behavior_session_table['mouse_id'] == mouse_id]\n",
