Fix type for pandas query.

--- a/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
@@ -4094,6 +4094,7 @@
     "    '''\n",
     "    plot stimuli as colored bars on specified axis\n",
     "    '''\n",
+    "    stimulus_presentations['omitted'] = stimulus_presentations['omitted'].astype('bool')\n",
     "    stimuli = stimulus_presentations.query('end_time >= {} and start_time <= {} and not omitted'.format(float(trial['start_time']), float(trial['stop_time'])))\n",
     "    for idx, stimulus in stimuli.iterrows():\n",
     "        ax.axvspan(stimulus['start_time'], stimulus['end_time'], color=stimulus['color'], alpha=0.5)\n",
