--- a/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
@@ -4094,6 +4094,7 @@
     "    '''\n",
     "    plot stimuli as colored bars on specified axis\n",
     "    '''\n",
+    "    # Fixup type for use in query.\n",
     "    stimulus_presentations['omitted'] = stimulus_presentations['omitted'].astype('bool')\n",
     "    stimuli = stimulus_presentations.query('end_time >= {} and start_time <= {} and not omitted'.format(float(trial['start_time']), float(trial['stop_time'])))\n",
     "    for idx, stimulus in stimuli.iterrows():\n",
