Add note about amplitude scaling

--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_raw_ephys_and_video_data_access.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_raw_ephys_and_video_data_access.ipynb
@@ -564,7 +564,12 @@
     "        \"amplitude_scaling_factor\": 0.5,\n",
     "        \"note\": \"'amplitude_scaling_factor' applies to data in spike_band and lfp_band .dat files; the scaling factor as already been applied to the 'gain' parameter in the settings.xml file\"\n",
     "    }\n",
-    "    ```\n"
+    "    ```\n",
+    "## Continuous data scaling\n",
+    "`amplitude_scaling_factor` in `probe_info.json` indicates a scaling factor of either `1.0` or `0.5` that **MUST** be applied\n",
+    "to the continuous data to adjust for differences in acquisition across sessions. \n",
+    "\n",
+    "The relevant metadata in the `settings.xml` file already captures this scaling, so if your spike sorter uses that information, no further action is needed."
    ]
   }
  ],
