Update aws cli commands after testing

--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_raw_ephys_and_video_data_access.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_raw_ephys_and_video_data_access.ipynb
@@ -133,19 +133,21 @@
     "```\n",
     "\n",
     "**Download files with `cp`:**\n",
+    "\n",
     "The `aws s3 cp` command allows you to download one or more files to a local directory. See the\n",
     "documentation for more details: [AWS S3 cp\n",
     "command](https://docs.aws.amazon.com/cli/latest/reference/s3/cp.html).\n",
     "\n",
-    "**single file:**\n",
-    "```bash\n",
-    "aws s3 cp s3://allen-brain-observatory/visual-behavior-neuropixels/raw-data/1043752325/behavior_videos/side.mp4 ./local_videos/ --no-sign-request\n",
-    "```\n",
+    "- single video:\n",
+    "    ```bash\n",
+    "    aws s3 cp s3://allen-brain-observatory/visual-behavior-neuropixels/raw-data/1043752325/behavior_videos/side.mp4 ./raw-data/1043752325/behavior_videos/ --no-sign-request\n",
+    "    ```\n",
     "\n",
-    "**all videos:**\n",
-    "```bash\n",
-    "aws s3 sync s3://allen-brain-observatory/visual-behavior-neuropixels/raw-data/ ./local_videos/ --include \"*behavior_videos*\" --no-sign-request\n",
-    "```"
+    "- all videos:\n",
+    "    ```bash\n",
+    "    aws s3 cp s3://allen-brain-observatory/visual-behavior-neuropixels/raw-data/ ./raw-data/ --recursive --exclude \"*\" --include \"*.mp4\" --include \"*_metadata.json\" --include \"eye_timestamps.npy\" --include \"face_timestamps.npy\" --include \"side_timestamps.npy\" --no-sign-request --dryrun\n",
+    "    ```\n",
+    "    Note that `--dryrun` allows you to preview which files would be downloaded without actually downloading them - remove this flag to perform the actual download."
    ]
   },
   {
