Move imports to first cell

--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_raw_ephys_and_video_data_access.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_raw_ephys_and_video_data_access.ipynb
@@ -36,6 +36,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c90a0dee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# required imports for the code snippets in this notebook\n",
+    "from typing import Literal, Union\n",
+    "\n",
+    "import boto3\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "from botocore import UNSIGNED\n",
+    "from botocore.config import Config"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fb8b6c4c",
    "metadata": {},
@@ -173,15 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "836b250c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3\n",
-    "from botocore import UNSIGNED\n",
-    "from botocore.config import Config\n",
-    "\n",
     "# Create an S3 client configured for unsigned (anonymous) requests\n",
     "s3_client = boto3.client('s3', config=Config(signature_version=UNSIGNED))\n",
     "\n",
@@ -304,10 +317,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Literal, Union\n",
-    "\n",
-    "import cv2\n",
-    "\n",
     "def get_video_obj(session_id: Union[int, str], camera: Literal['eye', 'face', 'side']) -> cv2.VideoCapture:\n",
     "    \"\"\"\n",
     "    Get an OpenCV VideoCapture object for a specific session video.\n",
@@ -388,8 +397,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Get the cv2 video object for a specific video file:\n",
     "session_id = 1043752325\n",
     "camera = 'side'\n",
