fix: E712 (boolean comparison) with idiomatic pandas

--- a/doc_template/examples_root/examples/nb/aligning_behavioral_data_to_task_events_with_the_stimulus_and_trials_tables.ipynb
+++ b/doc_template/examples_root/examples/nb/aligning_behavioral_data_to_task_events_with_the_stimulus_and_trials_tables.ipynb
@@ -164,11 +164,11 @@
       "\n",
       "is not deleted between instantiations of this cache\n",
       "  warnings.warn(msg, MissingLocalManifestWarning)\n",
-      "ecephys_sessions.csv: 100%|██████████| 64.7k/64.7k [00:00<00:00, 510kMB/s] \n",
-      "behavior_sessions.csv: 100%|██████████| 562k/562k [00:00<00:00, 3.02MMB/s] \n",
-      "units.csv: 100%|██████████| 132M/132M [00:05<00:00, 24.1MMB/s]\n",
-      "probes.csv: 100%|██████████| 130k/130k [00:00<00:00, 798kMB/s]  \n",
-      "channels.csv: 100%|██████████| 27.9M/27.9M [00:01<00:00, 18.9MMB/s]\n"
+      "ecephys_sessions.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 64.7k/64.7k [00:00<00:00, 510kMB/s] \n",
+      "behavior_sessions.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 562k/562k [00:00<00:00, 3.02MMB/s] \n",
+      "units.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 132M/132M [00:05<00:00, 24.1MMB/s]\n",
+      "probes.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 130k/130k [00:00<00:00, 798kMB/s]  \n",
+      "channels.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 27.9M/27.9M [00:01<00:00, 18.9MMB/s]\n"
      ]
     }
    ],
@@ -277,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ecephys_session_1065437523.nwb: 100%|██████████| 3.20G/3.20G [02:26<00:00, 21.8MMB/s]\n",
+      "ecephys_session_1065437523.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 3.20G/3.20G [02:26<00:00, 21.8MMB/s]\n",
       "/opt/hostedtoolcache/Python/3.8.18/x64/lib/python3.8/site-packages/hdmf/spec/namespace.py:531: UserWarning: Ignoring cached namespace 'hdmf-common' version 1.5.1 because version 1.8.0 is already loaded.\n",
       "  warn(\"Ignoring cached namespace '%s' version %s because version %s is already loaded.\"\n",
       "/opt/hostedtoolcache/Python/3.8.18/x64/lib/python3.8/site-packages/hdmf/spec/namespace.py:531: UserWarning: Ignoring cached namespace 'core' version 2.5.0 because version 2.6.0-alpha is already loaded.\n",
@@ -753,10 +753,10 @@
    ],
    "source": [
     "#get the active behavior part of the stim table\n",
-    "active_behavior = stimulus_presentations[stimulus_presentations['active']==True]\n",
+    "active_behavior = stimulus_presentations[stimulus_presentations['active']]\n",
     "\n",
     "#for now, let's leave out the omitted stimuli\n",
-    "active_behavior_no_omissions = active_behavior[active_behavior['omitted']==False]\n",
+    "active_behavior_no_omissions = active_behavior[~active_behavior['omitted']]\n",
     "\n",
     "#plot histogram of the stimulus durations\n",
     "fig, axes = plt.subplots(1, 2)\n",
@@ -1667,7 +1667,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows \u00d7 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1944,7 +1944,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows \u00d7 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2279,7 +2279,7 @@
     "\n",
     "#Get stimulus presentations around this reward\n",
     "behavior_presentations = stimulus_presentations[stimulus_presentations['active']]\n",
-    "behavior_presentations = behavior_presentations[(behavior_presentations['omitted']==False)]\n",
+    "behavior_presentations = behavior_presentations[~behavior_presentations['omitted']]\n",
     "trial_stimuli = behavior_presentations.query('end_time >= {} and start_time <= {}'.\n",
     "                                             format(reward_time-time_before, reward_time+time_after))\n",
     "\n",
