--- a/doc_template/examples_root/examples/nb/ecephys_lfp_analysis.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_lfp_analysis.ipynb
@@ -207,7 +207,7 @@
      "output_type": "stream",
      "text": [
       "WARNING:root:downloading a 2723.916MiB file from http://api.brain-map.org//api/v2/well_known_file_download/1026124469\n",
-      "Downloading: 100%|██████████| 2.86G/2.86G [03:33<00:00, 13.4MB/s]\n",
+      "Downloading: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 2.86G/2.86G [03:33<00:00, 13.4MB/s]\n",
       "/opt/hostedtoolcache/Python/3.8.18/x64/lib/python3.8/site-packages/hdmf/spec/namespace.py:531: UserWarning: Ignoring cached namespace 'hdmf-common' version 1.1.3 because version 1.8.0 is already loaded.\n",
       "  warn(\"Ignoring cached namespace '%s' version %s because version %s is already loaded.\"\n",
       "/opt/hostedtoolcache/Python/3.8.18/x64/lib/python3.8/site-packages/hdmf/spec/namespace.py:531: UserWarning: Ignoring cached namespace 'core' version 2.2.2 because version 2.6.0-alpha is already loaded.\n",
@@ -447,7 +447,7 @@
     "\n",
     "print('Fraction of probes with LFP: ' + str(np.around( np.sum(probes.has_lfp_data) / len(probes), 3) ) )\n",
     "print(' ')\n",
-    "print('Sessions with missing LFP files: ' + str(list(probes[probes.has_lfp_data == False].ecephys_session_id.unique())))"
+    "print('Sessions with missing LFP files: ' + str(list(probes[~probes.has_lfp_data].ecephys_session_id.unique())))"
    ]
   },
   {
@@ -786,7 +786,7 @@
       "/opt/hostedtoolcache/Python/3.8.18/x64/lib/python3.8/site-packages/hdmf/spec/namespace.py:531: UserWarning: Ignoring cached namespace 'core' version 2.2.2 because version 2.6.0-alpha is already loaded.\n",
       "  warn(\"Ignoring cached namespace '%s' version %s because version %s is already loaded.\"\n",
       "WARNING:root:downloading a 2345.194MiB file from http://api.brain-map.org//api/v2/well_known_file_download/1026124475\n",
-      "Downloading: 100%|██████████| 2.46G/2.46G [03:11<00:00, 12.8MB/s]\n"
+      "Downloading: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 2.46G/2.46G [03:11<00:00, 12.8MB/s]\n"
      ]
     }
    ],
@@ -961,7 +961,7 @@
        "\n",
        ".xr-section-summary-in + label:before {\n",
        "  display: inline-block;\n",
-       "  content: '►';\n",
+       "  content: '\u25ba';\n",
        "  font-size: 11px;\n",
        "  width: 15px;\n",
        "  text-align: center;\n",
@@ -972,7 +972,7 @@
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label:before {\n",
-       "  content: '▼';\n",
+       "  content: '\u25bc';\n",
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label > span {\n",
@@ -1469,7 +1469,7 @@
        "\n",
        ".xr-section-summary-in + label:before {\n",
        "  display: inline-block;\n",
-       "  content: '►';\n",
+       "  content: '\u25ba';\n",
        "  font-size: 11px;\n",
        "  width: 15px;\n",
        "  text-align: center;\n",
@@ -1480,7 +1480,7 @@
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label:before {\n",
-       "  content: '▼';\n",
+       "  content: '\u25bc';\n",
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label > span {\n",
@@ -2774,7 +2774,7 @@
        "\n",
        ".xr-section-summary-in + label:before {\n",
        "  display: inline-block;\n",
-       "  content: '►';\n",
+       "  content: '\u25ba';\n",
        "  font-size: 11px;\n",
        "  width: 15px;\n",
        "  text-align: center;\n",
@@ -2785,7 +2785,7 @@
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label:before {\n",
-       "  content: '▼';\n",
+       "  content: '\u25bc';\n",
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label > span {\n",
