--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_LFP_analysis.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_LFP_analysis.ipynb
@@ -188,11 +188,11 @@
       "\n",
       "is not deleted between instantiations of this cache\n",
       "  warnings.warn(msg, MissingLocalManifestWarning)\n",
-      "ecephys_sessions.csv: 100%|██████████| 64.7k/64.7k [00:00<00:00, 507kMB/s] \n",
-      "behavior_sessions.csv: 100%|██████████| 562k/562k [00:00<00:00, 3.10MMB/s] \n",
-      "units.csv: 100%|██████████| 132M/132M [00:05<00:00, 24.4MMB/s]\n",
-      "probes.csv: 100%|██████████| 130k/130k [00:00<00:00, 700kMB/s]  \n",
-      "channels.csv: 100%|██████████| 27.9M/27.9M [00:01<00:00, 18.1MMB/s]\n"
+      "ecephys_sessions.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 64.7k/64.7k [00:00<00:00, 507kMB/s] \n",
+      "behavior_sessions.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 562k/562k [00:00<00:00, 3.10MMB/s] \n",
+      "units.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 132M/132M [00:05<00:00, 24.4MMB/s]\n",
+      "probes.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 130k/130k [00:00<00:00, 700kMB/s]  \n",
+      "channels.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 27.9M/27.9M [00:01<00:00, 18.1MMB/s]\n"
      ]
     }
    ],
@@ -495,7 +495,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ecephys_session_1064644573.nwb: 100%|██████████| 2.99G/2.99G [02:09<00:00, 23.1MMB/s]\n",
+      "ecephys_session_1064644573.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 2.99G/2.99G [02:09<00:00, 23.1MMB/s]\n",
       "/opt/hostedtoolcache/Python/3.8.18/x64/lib/python3.8/site-packages/hdmf/spec/namespace.py:531: UserWarning: Ignoring cached namespace 'hdmf-common' version 1.5.1 because version 1.8.0 is already loaded.\n",
       "  warn(\"Ignoring cached namespace '%s' version %s because version %s is already loaded.\"\n",
       "/opt/hostedtoolcache/Python/3.8.18/x64/lib/python3.8/site-packages/hdmf/spec/namespace.py:531: UserWarning: Ignoring cached namespace 'core' version 2.5.0 because version 2.6.0-alpha is already loaded.\n",
@@ -572,7 +572,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "probe_probeC_lfp.nwb: 100%|██████████| 4.68G/4.68G [03:16<00:00, 23.7MMB/s]\n",
+      "probe_probeC_lfp.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 4.68G/4.68G [03:16<00:00, 23.7MMB/s]\n",
       "/opt/hostedtoolcache/Python/3.8.18/x64/lib/python3.8/site-packages/hdmf/spec/namespace.py:531: UserWarning: Ignoring cached namespace 'hdmf-common' version 1.5.1 because version 1.8.0 is already loaded.\n",
       "  warn(\"Ignoring cached namespace '%s' version %s because version %s is already loaded.\"\n",
       "/opt/hostedtoolcache/Python/3.8.18/x64/lib/python3.8/site-packages/hdmf/spec/namespace.py:531: UserWarning: Ignoring cached namespace 'core' version 2.5.0 because version 2.6.0-alpha is already loaded.\n",
@@ -733,7 +733,7 @@
        "\n",
        ".xr-section-summary-in + label:before {\n",
        "  display: inline-block;\n",
-       "  content: '►';\n",
+       "  content: '\u25ba';\n",
        "  font-size: 11px;\n",
        "  width: 15px;\n",
        "  text-align: center;\n",
@@ -744,7 +744,7 @@
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label:before {\n",
-       "  content: '▼';\n",
+       "  content: '\u25bc';\n",
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label > span {\n",
@@ -1245,7 +1245,7 @@
        "\n",
        ".xr-section-summary-in + label:before {\n",
        "  display: inline-block;\n",
-       "  content: '►';\n",
+       "  content: '\u25ba';\n",
        "  font-size: 11px;\n",
        "  width: 15px;\n",
        "  text-align: center;\n",
@@ -1256,7 +1256,7 @@
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label:before {\n",
-       "  content: '▼';\n",
+       "  content: '\u25bc';\n",
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label > span {\n",
@@ -2188,7 +2188,7 @@
    "outputs": [],
    "source": [
     "stims_in_window = stim_presentations[(stim_presentations.start_time>start_time)&(stim_presentations.start_time<end_time) &\n",
-    "                                    (stim_presentations.omitted==False)]\n",
+    "                                    (~stim_presentations.omitted)]\n",
     "stim_times_in_window = stims_in_window.start_time.values"
    ]
   },
@@ -2608,7 +2608,7 @@
        "\n",
        ".xr-section-summary-in + label:before {\n",
        "  display: inline-block;\n",
-       "  content: '►';\n",
+       "  content: '\u25ba';\n",
        "  font-size: 11px;\n",
        "  width: 15px;\n",
        "  text-align: center;\n",
@@ -2619,7 +2619,7 @@
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label:before {\n",
-       "  content: '▼';\n",
+       "  content: '\u25bc';\n",
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label > span {\n",
