--- a/doc_template/examples_root/examples/nb/visual_behavior_ophys_dataset_manifest.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_ophys_dataset_manifest.ipynb
@@ -281,7 +281,7 @@
       "Collecting pip\r\n",
       "  Downloading pip-23.3.1-py3-none-any.whl.metadata (3.5 kB)\r\n",
       "Downloading pip-23.3.1-py3-none-any.whl (2.1 MB)\r\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m42.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
+      "\u001b[2K   \u001b[90m\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m42.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
       "\u001b[?25hInstalling collected packages: pip\r\n",
       "  Attempting uninstall: pip\r\n",
       "    Found existing installation: pip 23.0.1\r\n",
@@ -533,10 +533,10 @@
       "\n",
       "is not deleted between instantiations of this cache\n",
       "  warnings.warn(msg, MissingLocalManifestWarning)\n",
-      "ophys_session_table.csv: 100%|██████████| 247k/247k [00:00<00:00, 1.63MMB/s] \n",
-      "behavior_session_table.csv: 100%|██████████| 1.59M/1.59M [00:00<00:00, 7.10MMB/s]\n",
-      "ophys_experiment_table.csv: 100%|██████████| 657k/657k [00:00<00:00, 4.52MMB/s] \n",
-      "ophys_cells_table.csv: 100%|██████████| 4.28M/4.28M [00:00<00:00, 11.8MMB/s]\n",
+      "ophys_session_table.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 247k/247k [00:00<00:00, 1.63MMB/s] \n",
+      "behavior_session_table.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 1.59M/1.59M [00:00<00:00, 7.10MMB/s]\n",
+      "ophys_experiment_table.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 657k/657k [00:00<00:00, 4.52MMB/s] \n",
+      "ophys_cells_table.csv: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 4.28M/4.28M [00:00<00:00, 11.8MMB/s]\n",
       "/home/runner/work/AllenSDK/AllenSDK/allensdk/brain_observatory/behavior/behavior_project_cache/behavior_project_cache.py:135: UpdatedStimulusPresentationTableWarning: \n",
       "\tAs of AllenSDK version 2.16.0, the latest Visual Behavior Ophys data has been significantly updated from previous releases. Specifically the user will need to update all processing of the stimulus_presentations tables. These tables now include multiple stimulus types delineated by the columns `stimulus_block` and `stimulus_block_name`.\n",
       "\n",
@@ -944,7 +944,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 34 columns</p>\n",
+       "<p>5 rows \u00d7 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2220,7 +2220,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>107 rows × 2 columns</p>\n",
+       "<p>107 rows \u00d7 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2247,7 +2247,7 @@
    ],
    "source": [
     "# get a table of the project code for each mouse\n",
-    "project_code_lookup = behavior_sessions[behavior_sessions.project_code.isnull()==False].reset_index().drop_duplicates('mouse_id')[['mouse_id','project_code']]\n",
+    "project_code_lookup = behavior_sessions[~behavior_sessions.project_code.isnull()].reset_index().drop_duplicates('mouse_id')[['mouse_id','project_code']]\n",
     "project_code_lookup"
    ]
   },
@@ -2754,7 +2754,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
+       "<p>5 rows \u00d7 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -5124,7 +5124,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
+       "<p>5 rows \u00d7 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -5825,7 +5825,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
+       "<p>5 rows \u00d7 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -6533,7 +6533,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6 rows × 30 columns</p>\n",
+       "<p>6 rows \u00d7 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -6717,12 +6717,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "behavior_ophys_experiment_955276580.nwb: 100%|██████████| 313M/313M [00:13<00:00, 22.8MMB/s]\n",
-      "behavior_ophys_experiment_956903375.nwb: 100%|██████████| 322M/322M [00:13<00:00, 23.4MMB/s]\n",
-      "behavior_ophys_experiment_957652800.nwb: 100%|██████████| 318M/318M [00:13<00:00, 22.8MMB/s]\n",
-      "behavior_ophys_experiment_959337347.nwb: 100%|██████████| 342M/342M [00:14<00:00, 22.8MMB/s]\n",
-      "behavior_ophys_experiment_960351917.nwb: 100%|██████████| 327M/327M [00:14<00:00, 22.6MMB/s]\n",
-      "behavior_ophys_experiment_960960480.nwb: 100%|██████████| 332M/332M [00:18<00:00, 18.0MMB/s]\n"
+      "behavior_ophys_experiment_955276580.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 313M/313M [00:13<00:00, 22.8MMB/s]\n",
+      "behavior_ophys_experiment_956903375.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 322M/322M [00:13<00:00, 23.4MMB/s]\n",
+      "behavior_ophys_experiment_957652800.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 318M/318M [00:13<00:00, 22.8MMB/s]\n",
+      "behavior_ophys_experiment_959337347.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 342M/342M [00:14<00:00, 22.8MMB/s]\n",
+      "behavior_ophys_experiment_960351917.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 327M/327M [00:14<00:00, 22.6MMB/s]\n",
+      "behavior_ophys_experiment_960960480.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 332M/332M [00:18<00:00, 18.0MMB/s]\n"
      ]
     },
     {
@@ -6976,12 +6976,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "behavior_ophys_experiment_1050762966.nwb: 100%|██████████| 248M/248M [00:10<00:00, 22.6MMB/s]\n",
-      "behavior_ophys_experiment_1050762969.nwb: 100%|██████████| 258M/258M [00:11<00:00, 23.3MMB/s]\n",
-      "behavior_ophys_experiment_1050762972.nwb: 100%|██████████| 251M/251M [00:10<00:00, 25.1MMB/s]\n",
-      "behavior_ophys_experiment_1050762974.nwb: 100%|██████████| 251M/251M [00:10<00:00, 23.6MMB/s]\n",
-      "behavior_ophys_experiment_1050762975.nwb: 100%|██████████| 259M/259M [00:10<00:00, 25.0MMB/s]\n",
-      "behavior_ophys_experiment_1050762977.nwb: 100%|██████████| 250M/250M [00:10<00:00, 23.9MMB/s]\n"
+      "behavior_ophys_experiment_1050762966.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 248M/248M [00:10<00:00, 22.6MMB/s]\n",
+      "behavior_ophys_experiment_1050762969.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 258M/258M [00:11<00:00, 23.3MMB/s]\n",
+      "behavior_ophys_experiment_1050762972.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 251M/251M [00:10<00:00, 25.1MMB/s]\n",
+      "behavior_ophys_experiment_1050762974.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 251M/251M [00:10<00:00, 23.6MMB/s]\n",
+      "behavior_ophys_experiment_1050762975.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 259M/259M [00:10<00:00, 25.0MMB/s]\n",
+      "behavior_ophys_experiment_1050762977.nwb: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 250M/250M [00:10<00:00, 23.9MMB/s]\n"
      ]
     },
     {
